Grammar and Spelling Complete

--- a/investing/investing.html
+++ b/investing/investing.html
@@ -116,7 +116,7 @@
                               Techbio, CRISPR, Synthetic Biology and iPSC. Then I assess every company in that space until I find 
                               all the top companies I like. I will build a basket of those companies. I typically have 3 to 5 
                               science themes and each theme has a max cap of 20% of my portfolio. I will usually have 3 to 5 companies 
-                              in each theme. Less than 2 companies and its not a theme. More than 5 has to be narrowed down to the 
+                              in each theme. Less than 2 companies and it is not a theme. More than 5 has to be narrowed down to the 
                               best of the best. 
                          </p>
                          <p>
@@ -175,7 +175,7 @@
                               Covid has delayed many company's deadlines. I don't expect perfection. I expect consistency. As long as 
                               there is not a habit of dropping the ball. I like to follow a company for a few months and listen to 
                               conferences in real time before I make any commitment to buy. Then I start slowly with a small position and 
-                              only add when I think the company is impressing me with the results like data or events. Its like any other 
+                              only add when I think the company is impressing me with the results like data or events. It is like any other 
                               relationship. I have to take the time to get to know the company and trust the management before I commit 
                               my hard earned money to them.
                          </p>
@@ -393,7 +393,7 @@
                               4/The Starship Trooper Rule
                          </p>
                          <p>
-                              This is one of my favorite rules. It comes from the movie where the captian says, "The job is yours 
+                              This is one of my favorite rules. It comes from the movie where the captain says, "The job is yours 
                               until you die or I find better". This rule is important to remember when investing. It is about keeping good 
                               companies for as long as they remain good companies. I see too many investors turn an investment into a 
                               trade. They buy a company and it pops 50%. They sell it all. Then they miss out on the next 300% it goes 
@@ -440,7 +440,7 @@
                               out of the company and wait 30 days. The 30 days is the wash sale rule in case I am taking a loss on that company.
                               I can at least lock in that loss for taxes. After 30 days, I can assess again and buy them back if I find it 
                               wasn't an issue. I find a lot of investors feel like they are not investors if they walk away from a company for 
-                              while. There is no merit badge for loyalty in investing. 
+                              a while. There is no merit badge for loyalty in investing. 
                          </p>
                          <p>
                               9/Never Buy all At Once
