--- a/learning/anemia.html
+++ b/learning/anemia.html
@@ -204,7 +204,7 @@
                               patient. They edit these cells to switch them back to making healthy fetal Hemoglobin. They will deplete the remaining stem 
                               cells from the bone marrow and replace them. They put the corrected stem cells back into the patient. This 
                               is a long and complex process of extraction of stem cells, manufacturing and administration of the new 
-                              cells after a very toxic Busulfan Myleoablation. This does offer possible functional cures to patients based 
+                              cells after a very toxic Busulfan Myeloablation. This does offer possible functional cures to patients based 
                               on the data.
                          </p>
                          <p class="top-link"><a href="#top">Top</a></p>
