--- a/learning/bcells.html
+++ b/learning/bcells.html
@@ -96,7 +96,7 @@
                               Antibodies are made up of  four separate proteins connected by flexible disulfide bonds. They 
                               look a lot like a Y. They contain two long protein chains called the heavy chains. These heavy chains will 
                               change as the immune response progresses in a process called class switching. The other two chains are 
-                              called the light chains. At the tip of each chain, there is the antigen binding sites which are called the Function 
+                              called the light chains. At the tip of each chain, there are the antigen binding sites which are called the Function 
                               Antigen Binding (FAB) region of the antibody. This is the unique part of the antibody that binds to a 
                               pathogen. The rest of the antibody structure is called the Fragment Crystallizable (Fc) region. This is the 
                               section of the antibody that interacts with other cells of the immune system. The Fc portion of the 
