--- a/learning/celltherapy.html
+++ b/learning/celltherapy.html
@@ -161,7 +161,7 @@
                               therapies. 
                          </p>
                          <p>
-                              Some other advantages of the NK cell is it has the CD16 receptor wich allows them to work with antibodies in 
+                              Some other advantages of the NK cell is it has the CD16 receptor which allows them to work with antibodies in 
                               a process called Antibody Dependent Cellular Cytotoxicity (ADCC). This allows for great combination 
                               treatments with already existing and newly developed cancer antibodies. Another advantage of NK cells is 
                               they are tissue oriented immune cells. Where the T cells and B cells typically remain in the lymph nodes 
@@ -213,7 +213,7 @@
                          <p>
                               They even release many of the same cytokines to initiate inflammation like Macrophages such as Interferon and TNF-a.
                               Beside having their own limited Delta/Gamma T cell receptor, they have many other receptors. It is also believed 
-                              that these Delta/Gamma T cells can do differentiate like the helper T cells into a Delta/Gamma T17 cell. The 
+                              that these Delta/Gamma T cells can differentiate like the helper T cells into a Delta/Gamma T17 cell. The 
                               first of the many receptors for the Delta/Gamma T cell is the NKG2D receptors which measures the level of
                               MHC I on cells to see if they are healthy. They also have the receptors to detect Mic-a and Mic-b 
                               variants of MHC I that are often stress ligands. They have a CD1 receptor which works as a limited 
