--- a/learning/chemotherapy.html
+++ b/learning/chemotherapy.html
@@ -218,7 +218,7 @@
                          <p>
                               The last drug I want to cover in this category is Gemcitabine which is used often. 
                               This is an example of an analog. It is a fake form of a nucleotide. When it enters the cell, it is modified 
-                              so it can be used in the new strand of DNA. Because its not a real nucleotide the DNA repair machinery 
+                              so it can be used in the new strand of DNA. Because it's not a real nucleotide the DNA repair machinery 
                               won't be able to fix it. This leads to an unfixable DNA damage situation which arrests the cell division and 
                               causes the initiation of cell death by p53 activation.
                          </p>
@@ -294,7 +294,7 @@
                          <p>
                               Busulfan is another type of Alkylating agent called Alkyl Sulfonates. Busulfan works 
                               by the same concept. It specifically cross links guanine bases.
-                              You will hear about Busulfan use a lot in genetic therapies. It is used to deplete stem cells to remove 
+                              You will hear about Busulfan use in a lot in genetic therapies. It is used to deplete stem cells to remove 
                               them before transplant. It is used by companies doing stem cell therapies like CRISPR therapeutics for its 
                               Sickle Cell drug. It removes the bad stem cells before they put in the new ones. 
                          </p>
