--- a/learning/genetics.html
+++ b/learning/genetics.html
@@ -276,7 +276,7 @@
                          <p>
                               The term ploidy is used in genetics to represent how many copies of each chromosome each species has. If a 
                               cell has only 1 copy of each chromosome, like our germline cells, that is haploid. Often shown as (N). If a cell has 2 
-                              copies of each chromosome, like our somatic cells, its called diploid (2N). Some species have more chromosomes.
+                              copies of each chromosome, like our somatic cells, it's called diploid (2N). Some species have more chromosomes.
                               The strawberry is octoploid with 8 copies of each chromosome. The understanding of the chromosomes, their 
                               structure and copy number is important in human disease. There can be chromosomal defects that can occur in 
                               the shape or even number of chromosomes. When cells end up with a wrong number in a specific chromosome, 
@@ -742,7 +742,7 @@
                               expressed with the MHC. You get 3 MHC class I antigens from mom and 3 MHC class I antigens from dad. Each 
                               and every cell will express all six of these antigens. No one antigen will be expressed more or less than 
                               the others. Then comes incomplete dominance. This is where the phenotype is a blend of the two genes. This concept is 
-                              best exampled from flowers. If you have a red flower and a white flower and decide to crossbreed them, your result 
+                              best shown from examples in flowers. If you have a red flower and a white flower and decide to crossbreed them, your result 
                               would be a pink flower in a heterozygous offspring.
                          </p>
                          <p>
@@ -840,7 +840,7 @@
                               chromosome. Some chromosomes or segments of chromosomes will allow a lot of exchange of DNA while others
                               won't ever have crossing over. Because of this process, the distance between 2 genes plays a role in gene 
                               linkage. The distance between 2 genes is measured in centimorgans (cM). The process of crossing over is 
-                              called recombination and its used to measure the distance between two different genes.
+                              called recombination and it is used to measure the distance between two different genes.
                          </p>
                          <p>
                               By measuring the rate of recombination occurring between 2 genes, we can determine the distance between those 
