--- a/learning/hallmarks.html
+++ b/learning/hallmarks.html
@@ -182,7 +182,7 @@
                          <p>
                               The next hallmark is the shifting of the balance between the signals that tell a cell to survive over 
                               those that tell it to die. All cells are constantly getting feedback in the form of signals that tell them 
-                              when they should surivie and when they should die. You want a healthy cell to survive and bad cells to 
+                              when they should survive and when they should die. You want a healthy cell to survive and bad cells to 
                               die. Only when something goes wrong, should it initiate programmed cell death (Apoptosis). In cancer, the 
                               pathways for the survival signals will mutate and greatly shift that balance in favor of survival even in 
                               conditions where a cell should undergo death like DNA damage. 
