--- a/learning/hematology.html
+++ b/learning/hematology.html
@@ -195,7 +195,7 @@
                               enterocytes turn over frequently. That means any iron that is not needed and absorbed by the body 
                               will be shed with the enterocytes into the waste. The movement of the iron from the enterocyte into the 
                               blood steam requires active transport by the enterocyte through a transport protein called Ferroportin. 
-                              This sends the iron into the bloodsteam in the form of Fe3+ Ferric iron. The iron needs to be transported 
+                              This sends the iron into the bloodstream in the form of Fe3+ Ferric iron. The iron needs to be transported 
                               in the blood by binding to a transport protein called Transferrin. That is because iron is a statically 
                               charged element. It can cause serious damage if not bound to Transferrin. The iron gets stored in the 
                               body in 2 places. The first is it is stored in the Macrophages of the Bone Marrow where it is used to 
@@ -506,7 +506,7 @@
                                inflammation, they think of immune cells and cytokines like TNF-a, IL-1b, C3a, C5a, or INF. These are 
                                all cytokines released by the immune process to promote inflammation. But not all damage is detectable 
                                by the immune cells. Sometimes it is an injury like a burn, cut or even chemical damage. This is where the 
-                               tissue damage pathway that is Arachidonic Acid comes into effect. There is a coordination and cooperation 
+                               tissue damage pathway that is Arachidonic Acid comes into effect. There is coordination and cooperation 
                                between the inflammation of the immune cells and the inflammation of arachidonic acid. Many people who 
                                study immunology miss this critical part about tissue damage inflammation.
                          </p>
@@ -844,7 +844,7 @@
                               The next set of disorders comes from the coagulation cascade with Hemophilia. There is Hemophilia A, 
                               Hemophilia B and Hemophilia C. There are about 15,000 Hemophilia A patients in the US. This is a genetic 
                               disorder in the Factor VIII production. These patients have little to no factor VIII and have problems 
-                              with coagulation. Hemophilia B has about 5,000 patients in the US that comes from defects in the gene for 
+                              with coagulation. Hemophilia B has about 5,000 patients in the US that come from defects in the gene for 
                               Factor IX. This leads to problems with clotting. Hemophilia C is a very mild disorder that most patients 
                               don't even realize they have. This is a defect in the Factor XI gene that helps activate Factor IX. These 
                               patients have increased bleeding times which can be problematic during dental or surgical procedures.
