--- a/learning/hla.html
+++ b/learning/hla.html
@@ -236,7 +236,7 @@
                               HLA-A would encode a different alpha chain which will recognize a different antigen in its binding groove. For example the HLA-A*02 you got 
                               from mom might recognize antigens with Leucines in it while the HLA-A*04 you got from dad might recognize antigens 
                               with Valine. This leads to diversity in our body for presenting antigens. The more variation we have in our MHC I proteins 
-                              the more antigens we can possibly present to the T cells to mount a response. This also account for why one person might 
+                              the more antigens we can possibly present to the T cells to mount a response. This also accounts for why one person might 
                               not respond well to a virus while another person might respond really well. 
                          </p>
                          <p class="top-link"><a href="#top">Top</a></p>
@@ -368,10 +368,10 @@
                          </p>
                          <p>
                               If you take a T cell that recognizes only HLA-A*02 and put it into a person with HLA-A*04, you can get rejection.
-                              That T cell will display all the MHC I antigens from the person who created it. The patient who recieves it might have 
+                              That T cell will display all the MHC I antigens from the person who created it. The patient who receives it might have 
                               T cells that have different MHC I antigens. That patient's T cells would kill the donor T cell before it could even 
                               do its intended work and kill the cancer. This is why they immune suppress patients for cell therapy treatments. 
-                              The other issue is that T cells won't recognize that patients MHC I. I won't be able to work with the antigen being presented 
+                              The other issue is that T cells won't recognize that patient's MHC I. I won't be able to work with the antigen being presented 
                               by the cancer cells of the patient. It can only recognize the exact HLA it was created for. Sometimes it can even get 
                               miss directed and respond to something it should not and cause off-target harm to the patient. That is extremely rare 
                               as T cells need 3 steps to activate them. Most of the result from a mismatch in HLA is ineffective cell therapies.
