--- a/learning/immunology.html
+++ b/learning/immunology.html
@@ -342,7 +342,7 @@
                               first cells to respond to a pathogen.
                          </p>
                          <p>
-                              First comes the Basophil and Mast cell. They are the same cells with the same role, but he Basophil is in 
+                              First comes the Basophil and Mast cell. They are the same cells with the same role, but the Basophil is in 
                               the circulation. When it moves into the tissue, it will differentiate into a Mast Cell. They have 
                               granules inside their cytoplasm that is released when they come in contact with pathogens. They have 
                               several receptors for pathogen detection and can respond to signals released from other cells or 
@@ -555,7 +555,7 @@
                               a fragment will cause inflammation and call in more sentry cells to kill pathogens. Once the C5b is on the 
                               pathogen surface, it will create a C5 convertase by binding with the C3 convertase. The C5 convertase will 
                               recruit C6, C7 and C8. These three proteins form a complex that looks like a 
-                              drilling rig. Then the C9 is used to drill through the membrane of the pathogen. Many of the C9 proteins wil 
+                              drilling rig. Then the C9 is used to drill through the membrane of the pathogen. Many of the C9 proteins will 
                               be used. This creates a hole in the membrane of the pathogen. When this happens in mass, it creates many 
                               holes in the pathogen which causes it to fall apart. This is called Lysis. The C5 convertase on the surface of the pathogen 
                               drives the process of forming these holes in the pathogen surface. The complex it builds is called the Membrane 
@@ -653,7 +653,7 @@
                          </p>
                          <p>
                               Activation of the Humoral response starts when Antigen Presenting Cells present the antigens in the presence 
-                              of IL-4 and IL-5. This will be antigens they processed from engulfing phathogens in the fluids or tissue. This causes the T helper cells 
+                              of IL-4 and IL-5. This will be antigens they processed from engulfing pathogens in the fluids or tissue. This causes the T helper cells 
                               to activate B cells which will produce antibodies. The antibodies can circulate the body and into the 
                               tissues. They can bind to pathogens and neutralize them until other immune cells can deal with them. Antibodies 
                               will trigger complement, NK cells and Macrophages.
