--- a/learning/inflammation.html
+++ b/learning/inflammation.html
@@ -104,7 +104,7 @@
                               to injury. The nerves and muscles respond first. Then the many inflammatory cytokines and mediators that 
                               are released by the sentry cells in the local area will contribute to inflammation. They can even start inflammation 
                               if an infection with no injury. Local Sentry and Mast Cell release things like Histamine, Prostaglandins, 
-                              Leukotrienes, Tumor Necrosis Factor alpha (TNF-a), Interleukin 1 (IL-1), C3a and C5a.  Inflammation is broken down 
+                              Leukotrienes, Tumor Necrosis Factor alpha (TNFa), Interleukin 1 (IL-1), C3a and C5a.  Inflammation is broken down 
                               into 2 categories based on where it starts. I have gone through so many immunology courses and they always 
                               focus on inflammation of cytokines released from immune cells, but never focus on inflammation of tissue 
                               damage.
@@ -181,7 +181,7 @@
                          <p>
                               When the endothelial cells receive these cytokines and inflammatory mediators, the vessels will dilate 
                               and increase their permeability. The endothelial cells shrink to allow the flow of blood and proteins into 
-                              the tissues, but not large enough for immune cells to pass through. The immune cells require a process 
+                              the tissues, but are not large enough for immune cells to pass through. The immune cells require a process 
                               called diapedesis which actively moves the immune cells from the blood into the tissue. This is called 
                               extravasation.  The process of diapedesis goes through several stages. First the selectins will be 
                               expressed by the endothelial cells and the immune cells such as neutrophils. The selectins on the immune 
@@ -200,7 +200,7 @@
                               endothelial cells. The initial activation of the endothelial cells with histamine and P selectins starts 
                               within seconds and lasts for the first hour or two. After that, the sentry cells like macrophages will 
                               process antigens and begin expressing proinflammatory cytokines like TNF-a and IL-1. These cytokines are 
-                              not expressed immediately as they actually takes time to be produced. The endothelial cells will release 
+                              not expressed immediately as they actually take time to be produced. The endothelial cells will release 
                               their P selectins as part of their Weibel Palade Bodies initially. Then they will express the E selectins 
                               later in response to the TNFa and IL-1.
                          </p>
