--- a/learning/oncology.html
+++ b/learning/oncology.html
@@ -140,7 +140,7 @@
                          </p>
                          <p>
                               The deactivation of GSK3-Beta will allow the first Cyclin with Cyclin D to build within the cell which pushes 
-                              the cell into G1 phase of the cycle. At the End of the G1 phase the cell will go through a checkpoint to 
+                              the cell into the G1 phase of the cycle. At the End of the G1 phase the cell will go through a checkpoint to 
                               ensure all the DNA is ready to be copied and no problems exist with the DNA. The DNA Repair pathways act as 
                               another set of breaks for the cell cycle. If anything goes wrong with the DNA the DDR pathways will stop 
                               the cell cycle. If the DNA is good, the cell proceeds to the S phase of the cycle.
@@ -230,7 +230,7 @@
                               cancer each year. Lung cancer makes up about 12% of all cancers and affects about 235,000 people in the 
                               US each year. About 85% of lung cancer falls into Non Small Cell Lung cancer (NSCLC). It makes up the 
                               largest subset with small cell lung cancer making about 15%. Many lung cancers are diagnosed when they 
-                              are advanced as they are hard to detect early. Up to 80% off all lung cancers stem from smoking. There are 
+                              are advanced as they are hard to detect early. Up to 80% of all lung cancers stem from smoking. There are 
                               a lot of environmental contributing factors for lung cancers, especially occupational for firefighters.
                          </p>
                          <p>
