--- a/learning/signaling.html
+++ b/learning/signaling.html
@@ -486,7 +486,7 @@
                               They are always watching and checking the DNA for any signs of damage. This is critical as the DNA does 
                               get damaged all day long from events like UV radiation and deamination events. The DNA can have hundreds 
                               of deamination events in a single day. There are a few basic pathways that regulate specific types of DNA 
-                              damage. They fall into Base Mismacth repair (MMR), Base Excision Repair (BER), Nucleotide Excision 
+                              damage. They fall into Base Mismatch repair (MMR), Base Excision Repair (BER), Nucleotide Excision 
                               Repair (NER), Single strand break and Double strand breaks. 
                          </p>
                          <p>
