--- a/learning/tcells.html
+++ b/learning/tcells.html
@@ -248,7 +248,7 @@
                               peripheral tolerance comes in.  The T cell needs to have multiple signals to confirm its activation. The binding 
                               of its receptor to a matching antigen is only one of them. It requires cytokines and other receptors to be 
                               activated to turn the T cell on. Without these confirming 2nd and 3rd signals, the T cell will most likely fall 
-                              into angery which means it does nothing. Eventually it will dies from neglect. If the T cell binds to an 
+                              into angery which means it does nothing. Eventually it will die from neglect. If the T cell binds to an 
                               antigen, but then gets other signals like TGF-Beta, it can be induced into a T regulatory cell. That new T reg 
                               cell will then stop responses by other T cells to that antigen. This is the process of peripheral tolerance. It gets exploited 
                               by cancer to induce T reg cells that promote tolerance to the tumor.
@@ -408,7 +408,7 @@
                          </p>
                          <p>
                               Another pathway the helper T cell can take is that of the T helper Type 2 or Th2. This happens in the 
-                              of presence IL-5. This creates the Th2 helper T cells which will activate B cells toward parasites
+                              presence of IL-5. This creates the Th2 helper T cells which will activate B cells toward parasites
                               and multicellular organisms. This works with IgE antibodies. It also plays a big role in allergies and 
                               allergic reactions. My study of T helper cells tells me there is a fine line between helper T cells releasing 
                               IL-4 and IL-5 that determines which response is triggered. More IL-4 released tends to activate B cells to produce IgM and 
@@ -416,7 +416,7 @@
                               to make IgE which works for fighting parasites.
                          </p>
                          <p>
-                              The last 2 pathways the T helper T cell can take are a bit unique. We already talked about how and activated 
+                              The last 2 pathways the T helper T cell can take are a bit unique. We already talked about how an activated 
                               T cell in the presence of TGF-Beta can turn into a T regulatory T cell. This is one possible fate a helper T 
                               cell can take. The other is that of a memory T cell. This happens automatically. As the helper T cells 
                               differentiate, some of them will become long lived memory T cells. They will hang out after the infection is 
@@ -584,7 +584,7 @@
                               here is these tend to have some toxic systemic side effects.
                          </p>
                          <p>
-                              The biggest challenge to CAR-T in solid tumors is the TME. The tumor lives and survives because it had 
+                              The biggest challenge to CAR-T in solid tumors is the TME. The tumor lives and survives because it has 
                               to develop mechanisms to avoid immune detection. The tumors will express TGF-Beta which induces T 
                               regulatory cells. They will make the environment one of acceptance of the tumor. They will block activated 
                               T cells. This is bad for the cytotoxic T cell therapies no matter what kind they are. The tumor will also 
