--- a/pages/clinicaldata.html
+++ b/pages/clinicaldata.html
@@ -113,8 +113,8 @@
                               the human body and any side effects it might cause. In non life threatening diseases, this is done in 
                               healthy volunteers. In diseases like cancer, they will test in patients with the disease. The first 2 
                               studies are the SAD (Single Ascending Dose) and MAD (Multiple Ascending Dose) studies. This is where 
-                              they test multiple doses across groups of patients to see each dose responde. You might hear of the 
-                              phase 1a and phase1 b studies. The phase 1a is all about the dose escalation and safety. The phase 1b is about finding 
+                              they test multiple doses across groups of patients to see each dose response. You might hear of the 
+                              phase 1a and phase1 b studies. Phase 1a is all about the dose escalation and safety. Phase 1b is about finding 
                               the right dose to move to phase 2. This might include expanding the patients tested at some doses that 
                               seem to have the best responses.
                          </p>
