--- a/pages/twist.html
+++ b/pages/twist.html
@@ -11,7 +11,6 @@
           <link rel="stylesheet" href="../styles/header.css">
           <link rel="stylesheet" href="../styles/main.css">
           <link rel="stylesheet" href="../styles/footer.css">
-          <link rel="stylesheet" href="../styles/company.css">
 
      </head>
      <body>
@@ -78,9 +77,12 @@
                     </section>  
 
                     <section class="section-container">
-                         <h2 class="list-header">Pipeline</h2>
+                         <h2 class="list-header">Management</h2>
                          <p class="profiles">
-                             Twist Doesn't have a pipeline. They develop antibodies in partnership with other companies.
+                              I have only been following Twist for about a year. I think Emily Leproust is doing a great job at running 
+                              the company. She seems to do a great job balancing the short term performance of sales with investing in 
+                              the future with new areas of development. They have two commercial segments that earn revenues while driving 
+                              growth. They are investing their cash into building out new areas around biopharma and DNA storage. 
                          </p>
                     </section> 
                     
@@ -94,19 +96,22 @@
                               to order. It is a great business with them doing DNA for the Synthetic Biology space and Ginkgo Bioworks.
                          </p>
                          <p class="profiles">
-                              They have a second business in the Next Gen Sequencing space by developing various testing kits. They 
-                              have various different kits they offer for sale. Their kits are 50% more efficient for the required amount 
-                              of sequencing needed. This is another business that does well.
+                              They have a second business in the Next Gen Sequencing space by developing various testing kits. They have 
+                              various different kits they offer for sale which offer higher efficiency than other kits in this space. 
+                              Their kits are 50% more efficient for the required amount of sequencing needed. This is another business 
+                              that does well.
                          </p>
                          <p class="profiles">
-                              They have a third business around developing antibodies for companies. This is a very early stage business 
-                              and it takes time for these programs to go through development and reach commercial use. They use their expertise 
-                              around DNA to help design these antibody therapies. They get milestones and royalties on these programs.
+                              They have a third business around developing antibodies for biotech companies. This is a very early stage
+                              business and it takes time for these programs to go through development and reach commercial use. They 
+                              use their expertise around DNA to help design these antibody therapies. They get milestones and 
+                              royalties on these programs.
                          </p>
                          <p class="profiles">
-                              Their last business is around developing DNA for storage of information. This can only be profitable if they can 
-                              reach the level of storage that makes it profitable. That makes this a challenging and risky area of expansion as 
-                              we don't know if they will ever be able to reach that level. 
+                              Their last business is around developing DNA for storage of information. This can only be profitable if 
+                              they can reach the level of storage that makes it profitable. That makes this a challenging and risky 
+                              area of expansion as we don't know if they will ever be able to reach that level. They plan to have an 
+                              initial product to test by the end of this year. 
                          </p>
                     </section>  
 
@@ -120,20 +125,23 @@
                               would be worth $1.325 billion in valuation. 
                          </p>
                          <p class="profiles">
-                              They have an entire pipeline of partners in the antibodies development space. It is really hard to value this 
-                              pipeline right now until we know more about the programs and the data they achieve. We don't know what kind 
-                              of milestones or royalties they get on these programs. This could be a huge driver of value in the future. 
+                              They have an entire pipeline of partners in the antibodies development space. It is really hard to value 
+                              this pipeline right now until we know more about the programs and the data they achieve. We don't know
+                              what kind of milestones or royalties they get on these programs. This could be a huge driver of value 
+                              in the future. I would give this segment a valuation of $250 million value. 
                          </p>
                          <p class="profiles">
-                              All in, that is a $1.83 billion market cap. Based on the 54 million shares outstanding , that comes to $33.88.
+                              All in, that is a $2.013 billion market cap. Based on the 56.5 million shares outstanding , 
+                              that comes to $35.62.
                          </p>
                     </section>  
 
                     <section class="section-container">
                          <h2 class="list-header">Events</h2>
                          <p class="profiles">
-                              There are no key events other than announcing data from their antibody partners. They might have
-                              occasional data form their DNA storage.
+                              They continue to assemble their first end-to-end DNA data storage system in anticipation of pilot 
+                              production to support early access to our Century Archive product toward the end of the calendar 
+                              year.
                          </p>
                     </section> 
 
