--- a/pages/science.html
+++ b/pages/science.html
@@ -73,6 +73,31 @@
                </section>
 
                <div class="science-layout">
+
+                    <section class="science-topic">
+                         <h2  class="science-list"><a href="../learning/chemistry.html">Chemistry</a></h2>
+                         <ul>
+                              <li class="science-topics">
+                                   <a href="../learning/chemistry.html#introtochem">Intro to Chemistry</a>
+                              </li>
+                              <li class="science-topics">
+                                   <a href="../learning/chemistry.html#electrons">Electron Configurations</a>
+                              </li>
+                              <li class="science-topics">
+                                   <a href="../learning/chemistry.html#bonding">Electron Bonding</a>
+                              </li>
+                         </ul>
+                    </section>
+
+                    <section class="science-topic">
+                         <h2 class="science-list"><a href="#">Biology</a></h2>
+                         <ul>
+                              <li class="science-topics">
+                                   <a href="#">Intro to Biology</a>
+                              </li>
+                         </ul>
+                    </section>
+
                     <section class="science-topic">
                          <h2  class="science-list"><a href="../learning/signaling.html">Cell Signaling</a></h2>
                          <ul>
@@ -158,6 +183,7 @@
                               </li>
                          </ul>
                     </section>
+
                     <section class="science-topic">
                          <h2 class="science-list"><a href="../learning/crispr.html">CRISPR</a></h2>
                          <ul>
